package pe.ayni.skills;

/** Global tools ship with Ayni; university courses belong to the university that teaches them. */
public enum CatalogScope {
  GLOBAL,
  UNIVERSITY
}
